sandbox UI